Add app version handler to AppManager
