# pkg/manager/app/handler.go
@@ -33,6 +33,19 @@ func (p *Server) getApp(appId string) (*models.App, error) {
 	return app, nil
 }
 
+func (p *Server) getAppVersion(versionId string) (*models.AppVersion, error) {
+	version := &models.AppVersion{}
+	err := p.Db.
+		Select(models.AppVersionColumns...).
+		From(models.AppVersionTableName).
+		Where(db.Eq("version_id", versionId)).
+		LoadOne(&version)
+	if err != nil {
+		return nil, err
+	}
+	return version, nil
+}
+
 func (p *Server) DescribeApps(ctx context.Context, req *pb.DescribeAppsRequest) (*pb.DescribeAppsResponse, error) {
 	s := sender.GetSenderFromContext(ctx)
 	logger.Infof("Got sender: %+v", s)
@@ -150,5 +163,116 @@ func (p *Server) DeleteApp(ctx context.Context, req *pb.DeleteAppRequest) (*pb.D
 
 	return &pb.DeleteAppResponse{
 		App: models.AppToPb(app),
+	}, nil
+}
+
+func (p *Server) CreateAppVersion(ctx context.Context, req *pb.CreateAppVersionRequest) (*pb.CreateAppVersionResponse, error) {
+	// TODO: validate CreateAppVersionRequest
+	s := sender.GetSenderFromContext(ctx)
+	newAppVersion := models.NewAppVersion(
+		req.GetAppId().GetValue(),
+		req.GetName().GetValue(),
+		req.GetDescription().GetValue(),
+		s.UserId,
+		req.GetPackageName().GetValue())
+
+	_, err := p.Db.
+		InsertInto(models.AppVersionTableName).
+		Columns(models.AppVersionColumns...).
+		Record(newAppVersion).
+		Exec()
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "CreateAppVersion: %+v", err)
+	}
+
+	res := &pb.CreateAppVersionResponse{
+		AppVersion: models.AppVersionToPb(newAppVersion),
+	}
+	return res, nil
+
+}
+
+func (p *Server) DescribeAppVersions(ctx context.Context, req *pb.DescribeAppVersionsRequest) (*pb.DescribeAppVersionsResponse, error) {
+	var versions []*models.AppVersion
+	offset := utils.GetOffsetFromRequest(req)
+	limit := utils.GetLimitFromRequest(req)
+
+	query := p.Db.
+		Select(models.AppVersionColumns...).
+		From(models.AppVersionTableName).
+		Offset(offset).
+		Limit(limit).
+		Where(manager.BuildFilterConditions(req, models.AppVersionTableName))
+	_, err := query.Load(&versions)
+	if err != nil {
+		// TODO: err_code should be implementation
+		return nil, status.Errorf(codes.Internal, "DescribeAppVersions: %+v", err)
+	}
+	count, err := query.Count()
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "DescribeAppVersions: %+v", err)
+	}
+
+	res := &pb.DescribeAppVersionsResponse{
+		AppVersionSet: models.AppVersionsToPbs(versions),
+		TotalCount:    count,
+	}
+	return res, nil
+
+}
+
+func (p *Server) ModifyAppVersion(ctx context.Context, req *pb.ModifyAppVersionRequest) (*pb.ModifyAppVersionResponse, error) {
+	// TODO: check resource permission
+	versionId := req.GetVersionId().GetValue()
+	version, err := p.getAppVersion(versionId)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to get app version [%s]", versionId)
+	}
+
+	attributes := manager.BuildUpdateAttributes(req, "name", "description", "package_name")
+	_, err = p.Db.
+		Update(models.AppVersionTableName).
+		SetMap(attributes).
+		Where(db.Eq("version_id", versionId)).
+		Exec()
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "ModifyAppVersion: %+v", err)
+	}
+	version, err = p.getAppVersion(versionId)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to get app version [%s]", versionId)
+	}
+
+	res := &pb.ModifyAppVersionResponse{
+		AppVersion: models.AppVersionToPb(version),
+	}
+	return res, nil
+
+}
+
+func (p *Server) DeleteAppVersion(ctx context.Context, req *pb.DeleteAppVersionRequest) (*pb.DeleteAppVersionResponse, error) {
+	// TODO: check resource permission
+	versionId := req.GetVersionId().GetValue()
+	_, err := p.getAppVersion(versionId)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to get app version [%s]", versionId)
+	}
+
+	_, err = p.Db.
+		Update(models.AppVersionTableName).
+		Set("status", constants.StatusDeleted).
+		Where(db.Eq("version_id", versionId)).
+		Exec()
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "DeleteAppVersion: %+v", err)
+	}
+
+	version, err := p.getAppVersion(versionId)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Failed to get app version [%s]", versionId)
+	}
+
+	return &pb.DeleteAppVersionResponse{
+		AppVersion: models.AppVersionToPb(version),
 	}, nil
 }
